ProFit Event App/objects/Event_Organizer__c.object
<CustomObject>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternative_Phone__c</fullName>
        <description>Organizer&apos;s Alternative Phone Number</description>
        <label>Alternative Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Location_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location List</label>
        <referenceTo>Location_List__c</referenceTo>
        <relationshipLabel>Event Organizers</relationshipLabel>
        <relationshipName>Event_Organizers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Organizer&apos;s Phone Number</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Event Organizer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Organizer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Organizers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>